--- a/infrastructure_contract/i18n/es.po
+++ b/infrastructure_contract/i18n/es.po
@@ -1,93 +1,106 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* infrastructure_contract
+# 	* infrastructure_contract
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-06 15:37+0000\n"
-"PO-Revision-Date: 2015-11-06 15:37+0000\n"
+"POT-Creation-Date: 2015-11-06 15:38+0000\n"
+"PO-Revision-Date: 2015-11-06 12:39-0300\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. module: infrastructure_contract
 #: model:ir.model,name:infrastructure_contract.model_account_analytic_account
 msgid "Analytic Account"
-msgstr ""
+msgstr "Cuenta Analítica"
 
 #. module: infrastructure_contract
 #: field:infrastructure.database,contract_id:0
 msgid "Contract"
-msgstr ""
+msgstr "Contrato"
 
 #. module: infrastructure_contract
 #: field:account.analytic.account,database_ids:0
 msgid "Databases"
-msgstr ""
+msgstr "Databases"
 
 #. module: infrastructure_contract
 #: field:account.analytic.account,odoo_version_id:0
 #: model:ir.model,name:infrastructure_contract.model_infrastructure_odoo_version
 msgid "Odoo Version"
-msgstr ""
+msgstr "Odoo Version"
 
 #. module: infrastructure_contract
 #: field:infrastructure.odoo_version,support_end_date:0
 msgid "Support End Date"
-msgstr ""
+msgstr "Fecha Fin Soporte"
 
 #. module: infrastructure_contract
 #: field:infrastructure.odoo_version,support_end_notification_date:0
 msgid "Support End Notification Date"
-msgstr ""
+msgstr "Fecha aviso Fin Soporte"
 
 #. module: infrastructure_contract
 #: field:infrastructure.odoo_version,support_start_date:0
 msgid "Support Start Date"
-msgstr ""
+msgstr "Fecha Inicio Soporte"
 
 #. module: infrastructure_contract
 #: field:account.analytic.account,support_validity:0
 msgid "Support Validity"
-msgstr ""
+msgstr "Support Validity"
 
 #. module: infrastructure_contract
 #: code:addons/infrastructure_contract/database.py:30
 #, python-format
-msgid "You can not Upload a Contract if module '%s' is not                    installed in the database"
+msgid ""
+"You can not Upload a Contract if module '%s' is not                    "
+"installed in the database"
 msgstr ""
+"You can not Upload a Contract if module '%s' is not                    "
+"installed in the database"
 
 #. module: infrastructure_contract
 #: code:addons/infrastructure_contract/database.py:34
 #, python-format
 msgid "You can not Upload a Contract if not contracted is linked"
-msgstr ""
+msgstr "You can not Upload a Contract if not contracted is linked"
 
 #. module: infrastructure_contract
 #: code:addons/infrastructure_contract/database.py:55
 #, python-format
-msgid "You can not Upload a Contract if there is not user related                 to the contract Partner"
+msgid ""
+"You can not Upload a Contract if there is not user related                 "
+"to the contract Partner"
 msgstr ""
+"You can not Upload a Contract if there is not user related                 "
+"to the contract Partner"
 
 #. module: infrastructure_contract
 #: code:addons/infrastructure_contract/account_analytic_account.py:40
 #, python-format
-msgid "You can not close a contract if there are related dbs in other state than \"inactive\".\n"
+msgid ""
+"You can not close a contract if there are related dbs in other state than "
+"\"inactive\".\n"
 "* DBS: %s"
 msgstr ""
+"You can not close a contract if there are related dbs in other state than "
+"\"inactive\".\n"
+"* DBS: %s"
 
 #. module: infrastructure_contract
 #: model:ir.model,name:infrastructure_contract.model_infrastructure_database
 msgid "database"
-msgstr ""
+msgstr "database"
 
 #. module: infrastructure_contract
 #: view:infrastructure.database:infrastructure_contract.view_infrastructure_database_form
 msgid "⇒ Upload Contract"
-msgstr ""
-
+msgstr "⇒ Upload Contract"
